Closed
Bug 1112413
Opened 10 years ago
Closed 10 years ago
mailnews/compose/src/nsMsgCompose.cpp:1476:28: error: 'class nsIScriptContext' has no member named 'GC
Categories
(MailNews Core :: Composition, defect)
MailNews Core
Composition
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 37.0
People
(Reporter: hiro, Assigned: hiro)
References
Details
(Keywords: dogfood, regression)
Attachments
(1 file, 2 obsolete files)
|
3.12 KB,
patch
|
hiro
:
review+
|
Details | Diff | Splinter Review |
/builds/slave/tb-try-c-cen-l64-0000000000000/build/mailnews/compose/src/nsMsgCompose.cpp: In member function 'virtual nsresult nsMsgCompose::CloseWindow(bool)':
/builds/slave/tb-try-c-cen-l64-0000000000000/build/mailnews/compose/src/nsMsgCompose.cpp:1476:28: error: 'class nsIScriptContext' has no member named 'GC'
make[5]: *** [nsMsgCompose.o] Error 1
| Assignee | ||
Comment 1•10 years ago
|
||
| Assignee | ||
Comment 2•10 years ago
|
||
Attachment #8537554 -
Attachment is obsolete: true
Comment 3•10 years ago
|
||
Either this fix or another recent checkin causes the disappearance of the bookmarks in the sidebar and the Bookmarks Manager on my SM-Trunk Linux x86_64.
| Assignee | ||
Updated•10 years ago
|
Attachment #8537581 -
Flags: review?(Pidgeot18)
Comment 4•10 years ago
|
||
Comment on attachment 8537581 [details] [diff] [review]
Fix
Review of attachment 8537581 [details] [diff] [review]:
-----------------------------------------------------------------
Please also remove the nsIScriptGlobalObject.h and nsIScriptContext.h imports at the top of the file.
Attachment #8537581 -
Flags: review?(Pidgeot18) → review+
| Assignee | ||
Comment 5•10 years ago
|
||
>
> Please also remove the nsIScriptGlobalObject.h and nsIScriptContext.h
> imports at the top of the file.
Done.
Thank you so much!
Assignee: nobody → hiikezoe
Attachment #8537581 -
Attachment is obsolete: true
Attachment #8537610 -
Flags: review+
| Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 12•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 37.0
Updated•10 years ago
|
Keywords: dogfood,
regression
Comment 13•10 years ago
|
||
This change causes nsMsgCompose.cpp to fail with external linkage, presumably because PokeGC is not exported.
Are we sure we really need this at all?
Comment 14•10 years ago
|
||
And by "do we need this" I mean maybe we can get rid of the call to PokeGC completely.
You need to log in
before you can comment on or make changes to this bug.
Description
•