Bug 1112413 - Followup fix for bug 1111076. use nsJSContext::PokeGC instead of nsIScriptContext::GC, r=jcranmer, a=jcranmer